@@ -1,20 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST hirb-0.2.9.gem 32256 RMD160 86e849b01277da79752880641236793a1b468cbb SHA1 f296c18204e8293dfde098dfbe63305242ab0142 SHA256 33d50db51a6571e3aa871e02e8c4b22194f0800989a192ee63b556c8a386a1d8
-DIST hirb-0.3.1.gem 41472 RMD160 62ceeefcb173b42a51294e309de8afe02503bd96 SHA1 a2d94bdafd7bc655f110c66bc9182fec879f8583 SHA256 4ad205c2e7aa34cc62223561f08c24d18959d9238d15b7dfe70d9bf0932ced27
-DIST hirb-0.3.2.gem 41984 RMD160 eb05d990ba984c15609715f89359b33a1012d6e9 SHA1 5f78bc710cf33179aea9e5740e5ce8829e69e418 SHA256 7675394aaa0638d98372ba5abcff0b846d0fc844deb04895f3ae3d6b85df05c7
 DIST hirb-0.3.4.gem 42496 RMD160 0846c6a3da8c4d1affd56700a177fc7412a9efe1 SHA1 9bd4129c997a02afcc6e8e72a2567d99cece9a30 SHA256 4663df4d51ed5cf6b42a86f2e00aec04213e6d3f1bcc244ecb8b4185fa86904d
-EBUILD hirb-0.2.9.ebuild 727 RMD160 48f84d1c968075a670bf68dfcdb6ea9fbc692ff6 SHA1 ee26941b6956d8250a7e7e8fda519055e34cfd0e SHA256 178e0055e94f651664fb51a5ca5893c528b2431e259c66831a3fd9c2bc314cee
-EBUILD hirb-0.3.1.ebuild 727 RMD160 48f84d1c968075a670bf68dfcdb6ea9fbc692ff6 SHA1 ee26941b6956d8250a7e7e8fda519055e34cfd0e SHA256 178e0055e94f651664fb51a5ca5893c528b2431e259c66831a3fd9c2bc314cee
-EBUILD hirb-0.3.2.ebuild 722 RMD160 48d3896265b5fb2ad0e4753776ae1a4f2563b003 SHA1 f2ef51dfc020cc902504c640cf56b3a97ee83716 SHA256 1dafee45d93305e0e3f2c401ec91d3f9af480cf8147ef0c4515125ad0228dbf4
 EBUILD hirb-0.3.4.ebuild 722 RMD160 48d3896265b5fb2ad0e4753776ae1a4f2563b003 SHA1 f2ef51dfc020cc902504c640cf56b3a97ee83716 SHA256 1dafee45d93305e0e3f2c401ec91d3f9af480cf8147ef0c4515125ad0228dbf4
-MISC ChangeLog 624 RMD160 6c84e154378113d642ed618f1009ddf5bdbe5b66 SHA1 0f4fd33aad1f9205fb6f03550390f376f8d3f45b SHA256 f019d59b0673c0813bde3f2030b1378cff1fa6ba3b15f98b7f79e08d0fa7b16f
+MISC ChangeLog 760 RMD160 405d890b1a9877611e45bd1181e1bd506a537c10 SHA1 d0d359caf2d40ac4a7b4df876d853a0c9fbb749d SHA256 78d6fc815f4a8bca6e02455b2d276ecc7c7ac83751647e68dbce350514801919
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAkybZmQACgkQZihJkut28SuOmAD8CvFcuDP7uY9SK14WCE75rCXK
-KYbRzXieX6Obq/4L1scA/1hXPtp6jOFX4JtgnLXMd4cWaveF0nkbDP0/ohWyDhFc
-=xDrY
+iF4EAREIAAYFAk33P9QACgkQrnu0mw69JkqdtAEAinJMWD0FG/NJqxRMaTC5nsZB
+J4xWryJssYijxVwi+Z8A/iaH5v5gH/mAbaIjwWV/wz1crJ/p8xlquFqC5rF2xcqg
+=fk8+
 -----END PGP SIGNATURE-----
