@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/hirb
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  14 Jun 2011; Hans de Graaff <graaff@gentoo.org> -hirb-0.2.9.ebuild,
+  -hirb-0.3.1.ebuild, -hirb-0.3.2.ebuild:
+  Remove old versions.
 
 *hirb-0.3.4 (23 Sep 2010)
 
